<resources>
    <string name="app_name">LeetcodeFarm</string>
    <string name="notes">NOTES</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="start_note_here">Start note here...</string>


    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="Choose_an_emoji" />
    <string name="choose_an_emoji">Choose an emoji</string>

    <string name="delete_note">Delete Note</string>
    <string name="sure_to_delete_note">Are you sure to delete this note forever?</string>
    <string name="yes">YES</string>
    <string name="delete">DELETE</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="add_tags">Add tags for the note</string>
    <string name="add_leetcode_link">Add leetcode link</string>
    <string name="enter_url">Enter URL</string>
</resources>