<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".user.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint = "@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingEnd="16dp"
            android:textColor="@color/purple_700"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint = "@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingEnd="16dp"
            android:textColor="@color/purple_700"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint = "@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="16dp"
            android:textColor="@color/purple_700"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint = "@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="16dp"
            android:textColor="@color/purple_700"
            android:textSize="13sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>



        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"/>

    </LinearLayout>


</ScrollView>