<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_link_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/add_leetcode_link"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@id/imageAddUrl"/>

    <EditText
        android:id="@+id/textUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_13ssp"
        android:textColorHint="@color/hintGray"
        app:layout_constraintTop_toBottomOf="@+id/imageAddUrl"/>


    <TextView
        android:id="@+id/textUrlAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUrl"/>

    <TextView
        android:id="@+id/textUrlCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textUrlAdd"
        app:layout_constraintTop_toBottomOf="@id/textUrl"/>

    <TextView
        android:id="@+id/textUrlDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textUrlCancel"
        app:layout_constraintTop_toBottomOf="@id/textUrl"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>