<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNote"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/deleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete_forever"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/deleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deleteNote"
        app:layout_constraintTop_toTopOf="@+id/deleteNote"/>

    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/sure_to_delete_this_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/deleteNote"/>

    <TextView
        android:id="@+id/textNoteDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"/>

    <TextView
        android:id="@+id/textNoteCancelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@id/textNoteDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"/>


</androidx.constraintlayout.widget.ConstraintLayout>