<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/royal"
    tools:context=".note.NoteActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_image"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/purple_500"/>

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_notes"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageBack"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/purple_500" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:hint="@string/search_notes"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_back_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNoteMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_gravity="end|bottom"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_add"
            app:shapeAppearanceOverlay="@drawable/background_add_button" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>